--- a/plugins/livedesk-embed/gui-resources/index.html
+++ b/plugins/livedesk-embed/gui-resources/index.html
@@ -64,7 +64,7 @@
 			}
 			var livedesk = { 
 				'theme': {
-					'item/posttype/normal': '{>"theme/item/base"/}{<item_class}normal{/item_class}{<reference_name} funcorner.eu{/reference_name}'
+					'item/posttype/normal': '{>"theme/item/base"/}{<item_class}normal{/item_class}{<reference_name}thewebsiteyouwant.extension{/reference_name}'
 				},
 				'server': function(){ return config.api_url; },
 				'blog': config.rest_url+ '/my/LiveDesk/Blog/' + id
